results/SpecGenBench/conversational/log-FizzBuzzSeq-2023_11_28_00_24_54.txt
class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result % 3 == 0 && \result % 5 == 0;
    public int fizzBuzz(int n) {
        int res = 0;
        res += ((n % 3 == 0) ? 3 : 0);
        res += ((n % 5 == 0) ? 5 : 0);
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3:) in method fizzBuzz
        return res;
        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:8:
    //@ ensures \result % 3 == 0 && \result % 5 == 0;
        ^
2 verification failures

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : (n % 3 == 0) ? 3 : (n % 5 == 0) ? 5 : 0;
    public int fizzBuzz(int n) {
        int res = 0;
        res += ((n % 3 == 0) ? 3 : 0);
        res += ((n % 5 == 0) ? 5 : 0);
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : (n % 3 == 0) ? 3 : (n % 5 == 0) ? 5 : 0;
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : (n % 3 == 0) ? 3 : (n % 5 == 0) ? 5 : 0;
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        res += ((n % 3 == 0) ? 3 : 0);
        res += ((n % 5 == 0) ? 5 : 0);
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        res += ((n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0)));
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        if (n % 3 == 0 && n % 5 == 0) {
            res = 8;
        } else if (n % 3 == 0) {
            res = 3;
        } else if (n % 5 == 0) {
            res = 5;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        if (n % 3 == 0 && n % 5 == 0) {
            res = 8;
        } else if (n % 3 == 0) {
            res = 3;
        } else if (n % 5 == 0) {
            res = 5;
        } else {
            res = 0;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        if (n % 3 == 0 && n % 5 == 0) {
            res = 8;
        } else if (n % 3 == 0) {
            res = 3;
        } else if (n % 5 == 0) {
            res = 5;
        } else {
            res = 0;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        if (n % 3 == 0 && n % 5 == 0) {
            res = 8;
        } else if (n % 3 == 0) {
            res = 3;
        } else if (n % 5 == 0) {
            res = 5;
        } else {
            res = 0;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        if (n % 3 == 0 && n % 5 == 0) {
            res = 8;
        } else if (n % 3 == 0) {
            res = 3;
        } else if (n % 5 == 0) {
            res = 5;
        } else {
            res = 0;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

class FizzBuzzSeq {
    //@ requires n >= 0;
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
    public int fizzBuzz(int n) {
        int res = 0;
        if (n % 3 == 0 && n % 5 == 0) {
            res = 8;
        } else if (n % 3 == 0) {
            res = 3;
        } else if (n % 5 == 0) {
            res = 5;
        } else {
            res = 0;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incomparable types: int and boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                        ^
/home/max/Documents/JMLGPT/tmp/FizzBuzzSeq.java:3: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 3 == 0 && n % 5 == 0) ? 8 : ((n % 3 == 0) ? 3 : ((n % 5 == 0) ? 5 : 0));
                                                      ^
2 errors

